# BalanceBasket

./: .gitignore  README.md  README_DEPLOY.md  TODO.md
backend/: .gitignore  ai_service.py  auth.py  database.py  dataset_loader.py  dietary_filters.py  expand_dataset.py  grocery_api.py  list_optimizer.py  local_dataset.py  main.py  models.py  nohup.out  price_compare.py  product_search.py  pyproject.toml  requirements.txt  schemas.py  seasonal_guide.py  system_prompt.py
frontend/: nohup.out  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AIAssistant.tsx  AuthScreen.tsx  CommunityMeals.tsx  ListOptimizer.tsx  PantryManager.tsx  SearchTool.tsx  SeasonalDashboard.tsx
